# Autonomous_RnD

./: .gitignore  README.md
src/auto_robot/: package.xml
src/auto_robot/config/: depthimage_to_laserscan.yaml  slam_toolbox_depth.yaml
src/auto_robot/description/: depth_camera.xacro  robot.urdf.xacro
src/auto_robot/launch/: depth_mapping.launch.py
src/depth_smoothing/: CMakeLists.txt  README.md  package.xml
src/depth_smoothing/config/: depth_smoothing_params.yaml  depth_to_laserscan_params.yaml  smoothed_depth_visualization.rviz
src/depth_smoothing/include/depth_smoothing/: depth_smoothing_node.hpp
src/depth_smoothing/launch/: depth_smoothing_only.launch.py  realsense_depth_smoothing.launch.py  view_smoothed_depth.launch.py
src/depth_smoothing/src/: depth_smoothing_node.cpp
src/drone_control/: README.md  package.xml  setup.py
src/drone_control/config/: drone_config.yaml
src/drone_control/drone_control/: drone_controller.py  drone_test_client.py  joystick_interface.py
src/drone_control/launch/: drone_control.launch.py
src/ply_publisher/: package.xml  setup.cfg  setup.py
src/ply_publisher/launch/: pcd_costmap_launch.py
src/ply_publisher/ply_publisher/: costmap_pub.py  pcd_publisher.py  ply_pub.py  slope_based_costmap.py
src/ply_publisher/temp_map/: empty_map.pgm  empty_map.yaml
